-*- outline -*-

This file documents user visible changes between versions of StumpWM

* Changes since 0.9.4.1
** new command load-module

** added install/uninstall Makefile rules

** added info command

** added g{next,prev}-with-window commands

* Changes since 0.9.3
** new %interactivep% variable
see defcommand in the manual.

** The default package is now stumpwm-user
stumpwm-user imports all exported stumpwm symbols.

** the pixmap error plaguing some users has been fixed
If you are running sbcl, you need do nothing. If you're using clisp,
ensure the version is 2.46 or later.

** New macro defprogram-shortcut

* Changes since 0.9.2
** C-t <n> bindings moved to C-t C-<n>
To pull a window by number you now have to hold down Control. Just
pressing the number now selects the window by number in its frame.

** new commands modifiers and copy-last-message

** new command grouplist and binding C-t g "

** New keybinding C-t h c
bound to describe-command

** spelling mistake fixed
One global variable was changed. *new-window-prefered-frame* is now
called *new-window-preferred-frame*.

** new variable *window-border-style*

** new command exchange-windows

** new command type :direction

** define-stumpwm-command is deprecated
Use defcommand instead

** pull-window-by-number arguments are reversed

** renumber function's arguments are reversed

** C-h lists keybindings too
In any keymap C-h and ? will list the keybindings.

** New command bind
Hang a key binding off the escape key.

** C-t TAB changed to fnext
Maintain compatibility with the screen binding.

* Changes since 0.9.1
** key grab handling
top level key binding are now grabbed "asynchronously." This should
eliminate the keyboard freezes some have experiences.

** New command emacs

** AltGr modifier should be recognized now

** new command grename

* Changes since 0.0.6
These changes are probably incomplete

** added color codes to message windows.

** added XRandR dynamic rotate/resize support
