@@ -11,6 +11,8 @@ This file documents user visible changes between versions of StumpWM
 
 ** added g{next,prev}-with-window commands
 
+** added show-window-properties command
+
 * Changes since 0.9.3
 ** new %interactivep% variable
 see defcommand in the manual.
